Suppose I should say it's a ruby project, before someone 'wise' suggests this

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 This code will download files from your chatGPT shared url, to the output directory on your machine!
 Since it is downloading code from the internet, please use at your own risk.
 
+dependencies:
+ruby
+
 usage:
 ruby chat_code <chatGPT url>
 
